--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "author": "Jesse Rosengrant",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.1",
     "openmeteo": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,8 +28,10 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "fs": "^0.0.1-security",
     "html-webpack-plugin": "^5.5.3",
     "nodemon": "^3.0.1",
+    "path": "^0.12.7",
     "style-loader": "^3.3.3",
     "webpack-cli": "^5.1.4"
   }
