--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-react": "^7.23.3",
     "babel-core": "^6.26.3",
     "babel-loader": "^9.1.3",
+    "concurrently": "^8.2.2",
     "css-loader": "^6.8.1",
     "fs": "^0.0.1-security",
     "html-webpack-plugin": "^5.5.3",
